// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`init.behavior.idempotent given: [case5] direct: idempotent rerun on same behavior when: [t0] init.behavior executed twice with same name then: second run succeeds (idempotent): first run output 1`] = `
"🦫 oh, behave!
   ├─ + .ref.[feedback].v1.[given].by_human.md
   ├─ + 0.wish.md
   ├─ + 1.vision.guard
   ├─ + 1.vision.stone
   ├─ + 2.1.criteria.blackbox.stone
   ├─ + 2.2.criteria.blackbox.matrix.stone
   ├─ + 2.3.criteria.blueprint.stone
   ├─ + 3.1.1.research.external.product.access._.v1.stone
   ├─ + 3.1.1.research.external.product.claims._.v1.stone
   ├─ + 3.1.1.research.external.product.domain._.v1.stone
   ├─ + 3.1.1.research.external.product.domain.terms.v1.stone
   ├─ + 3.1.1.research.external.product.references._.v1.stone
   ├─ + 3.1.2.research.external.factory.oss.levers._.v1.stone
   ├─ + 3.1.2.research.external.factory.templates._.v1.stone
   ├─ + 3.1.2.research.external.factory.testloops._.v1.stone
   ├─ + 3.1.3.research.internal.product.code.prod._.v1.stone
   ├─ + 3.1.3.research.internal.product.code.test._.v1.stone
   ├─ + 3.1.4.research.internal.factory.blockers._.v1.stone
   ├─ + 3.1.4.research.internal.factory.opports._.v1.stone
   ├─ + 3.2.distill.domain._.v1.stone
   ├─ + 3.2.distill.factory.upgrades._.v1.stone
   ├─ + 3.2.distill.repros.experience._.v1.stone
   ├─ + 3.3.0.blueprint.factory.v1.stone
   ├─ + 3.3.1.blueprint.product.v1.guard
   ├─ + 3.3.1.blueprint.product.v1.stone
   ├─ + 4.1.roadmap.v1.stone
   ├─ + 5.1.execution.phase0_to_phaseN.v1.guard
   ├─ + 5.1.execution.phase0_to_phaseN.v1.stone
   ├─ + 5.3.verification.v1.guard
   ├─ + 5.3.verification.v1.stone
   ├─ + 5.5.playtest.v1.guard
   └─ + 5.5.playtest.v1.stone

🌲 go on then,
   ├─ .behavior/v{DATE}.same-behavior/0.wish.md
   └─ [2mtip: use --open to open the wish automatically[0m

🍄 we'll remember,
   ├─ branch feature/idempotent-init-test <-> behavior v{DATE}.same-behavior
   ├─ [2mbranch bound to behavior, to boot via hooks[0m
   └─ [2mbranch bound to route, to drive via hooks[0m"
`;

exports[`init.behavior.idempotent given: [case5] direct: idempotent rerun on same behavior when: [t0] init.behavior executed twice with same name then: second run succeeds (idempotent): second run output (idempotent) 1`] = `
"🦫 oh, behave!
   ├─ ✓ .ref.[feedback].v1.[given].by_human.md
   ├─ ✓ 0.wish.md
   ├─ ✓ 1.vision.guard
   ├─ ✓ 1.vision.stone
   ├─ ✓ 2.1.criteria.blackbox.stone
   ├─ ✓ 2.2.criteria.blackbox.matrix.stone
   ├─ ✓ 2.3.criteria.blueprint.stone
   ├─ ✓ 3.1.1.research.external.product.access._.v1.stone
   ├─ ✓ 3.1.1.research.external.product.claims._.v1.stone
   ├─ ✓ 3.1.1.research.external.product.domain._.v1.stone
   ├─ ✓ 3.1.1.research.external.product.domain.terms.v1.stone
   ├─ ✓ 3.1.1.research.external.product.references._.v1.stone
   ├─ ✓ 3.1.2.research.external.factory.oss.levers._.v1.stone
   ├─ ✓ 3.1.2.research.external.factory.templates._.v1.stone
   ├─ ✓ 3.1.2.research.external.factory.testloops._.v1.stone
   ├─ ✓ 3.1.3.research.internal.product.code.prod._.v1.stone
   ├─ ✓ 3.1.3.research.internal.product.code.test._.v1.stone
   ├─ ✓ 3.1.4.research.internal.factory.blockers._.v1.stone
   ├─ ✓ 3.1.4.research.internal.factory.opports._.v1.stone
   ├─ ✓ 3.2.distill.domain._.v1.stone
   ├─ ✓ 3.2.distill.factory.upgrades._.v1.stone
   ├─ ✓ 3.2.distill.repros.experience._.v1.stone
   ├─ ✓ 3.3.0.blueprint.factory.v1.stone
   ├─ ✓ 3.3.1.blueprint.product.v1.guard
   ├─ ✓ 3.3.1.blueprint.product.v1.stone
   ├─ ✓ 4.1.roadmap.v1.stone
   ├─ ✓ 5.1.execution.phase0_to_phaseN.v1.guard
   ├─ ✓ 5.1.execution.phase0_to_phaseN.v1.stone
   ├─ ✓ 5.3.verification.v1.guard
   ├─ ✓ 5.3.verification.v1.stone
   ├─ ✓ 5.5.playtest.v1.guard
   └─ ✓ 5.5.playtest.v1.stone

🌲 go on then,
   ├─ .behavior/v{DATE}.same-behavior/0.wish.md
   └─ [2mtip: use --open to open the wish automatically[0m

🍄 we'll remember,
   ├─ branch feature/idempotent-init-test <-> behavior v{DATE}.same-behavior
   ├─ [2mbranch bound to behavior, to boot via hooks[0m
   └─ [2mbranch bound to route, to drive via hooks[0m"
`;

exports[`init.behavior.idempotent given: [case9] direct: idempotent reruns preserve both binds when: [t0] init.behavior executed three times on same behavior then: first run creates files and both binds succeed 1`] = `
"🦫 oh, behave!
   ├─ + .ref.[feedback].v1.[given].by_human.md
   ├─ + 0.wish.md
   ├─ + 1.vision.guard
   ├─ + 1.vision.stone
   ├─ + 2.1.criteria.blackbox.stone
   ├─ + 2.2.criteria.blackbox.matrix.stone
   ├─ + 2.3.criteria.blueprint.stone
   ├─ + 3.1.1.research.external.product.access._.v1.stone
   ├─ + 3.1.1.research.external.product.claims._.v1.stone
   ├─ + 3.1.1.research.external.product.domain._.v1.stone
   ├─ + 3.1.1.research.external.product.domain.terms.v1.stone
   ├─ + 3.1.1.research.external.product.references._.v1.stone
   ├─ + 3.1.2.research.external.factory.oss.levers._.v1.stone
   ├─ + 3.1.2.research.external.factory.templates._.v1.stone
   ├─ + 3.1.2.research.external.factory.testloops._.v1.stone
   ├─ + 3.1.3.research.internal.product.code.prod._.v1.stone
   ├─ + 3.1.3.research.internal.product.code.test._.v1.stone
   ├─ + 3.1.4.research.internal.factory.blockers._.v1.stone
   ├─ + 3.1.4.research.internal.factory.opports._.v1.stone
   ├─ + 3.2.distill.domain._.v1.stone
   ├─ + 3.2.distill.factory.upgrades._.v1.stone
   ├─ + 3.2.distill.repros.experience._.v1.stone
   ├─ + 3.3.0.blueprint.factory.v1.stone
   ├─ + 3.3.1.blueprint.product.v1.guard
   ├─ + 3.3.1.blueprint.product.v1.stone
   ├─ + 4.1.roadmap.v1.stone
   ├─ + 5.1.execution.phase0_to_phaseN.v1.guard
   ├─ + 5.1.execution.phase0_to_phaseN.v1.stone
   ├─ + 5.3.verification.v1.guard
   ├─ + 5.3.verification.v1.stone
   ├─ + 5.5.playtest.v1.guard
   └─ + 5.5.playtest.v1.stone

🌲 go on then,
   ├─ .behavior/v{DATE}.idem-test/0.wish.md
   └─ [2mtip: use --open to open the wish automatically[0m

🍄 we'll remember,
   ├─ branch feature/idempotent-binds-test <-> behavior v{DATE}.idem-test
   ├─ [2mbranch bound to behavior, to boot via hooks[0m
   └─ [2mbranch bound to route, to drive via hooks[0m"
`;
